--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,10 @@
         {
             "type": "vcs",
             "url": "https://github.com/zoltech/laravel-permission-mongodb.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/TappNetwork/filament-timezone-field.git"
         }
     ],
     "require": {
@@ -20,7 +24,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "zoltech/laravel-permission-mongodb": "dev-master"
+        "zoltech/laravel-permission-mongodb": "dev-master",
+        "tapp/filament-timezone-field":"^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
