--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     ],
     "require": {
         "php": "^8.1",
+        "awcodes/filament-tiptap-editor": "^3.0",
         "filament/filament": "^3.0",
         "filament/spatie-laravel-translatable-plugin": "^3.0",
         "guzzlehttp/guzzle": "^7.2",
