Add Assignment and Question
commit 866cbea5c24ebd25841a15d966ca3d1cae931a4b
Author: Syauqi <kahmadsyauqi@upi.edu>
Date:   Sun Nov 12 12:24:29 2023 +0700

    Edit page labels

commit 9b1c62def8181201dfe1f120773a2bc0c6e6b9f9
Author: Syauqi <kahmadsyauqi@upi.edu>
Date:   Sun Nov 12 11:37:17 2023 +0700

    Fix typo 'l' to 'lg'

commit a3d66351589854b1fc4972cef15894e8bd3af5ff
Author: Syauqi <kahmadsyauqi@upi.edu>
Date:   Sun Nov 12 09:57:32 2023 +0700

    Change content editor to Tiptap Editor

commit 5cf8f61519066a2a2dfab1467be35cfeb01daaaa
Author: Syauqi <kahmadsyauqi@upi.edu>
Date:   Sat Nov 11 13:55:50 2023 +0700

    Add custom theme for Teacher panel

commit 3f03b0533691d56db55872170b2da7e7ba076142
Author: Syauqi <kahmadsyauqi@upi.edu>
Date:   Sat Nov 11 13:42:38 2023 +0700

    Add Tiptap Editor plugin

commit 6cde1271c2b48a6b1b169c38d49e2820aa930aa5
Author: Syauqi <kahmadsyauqi@upi.edu>
Date:   Sat Nov 11 11:20:19 2023 +0700

    Added translatable Question and Choice text

commit 17813b620725f2a48efb8c9e8798116a0c4e0764
Author: Syauqi <kahmadsyauqi@upi.edu>
Date:   Sat Nov 11 08:54:19 2023 +0700

    Add Spatie Translatable plugin

commit e8fea33d0d1a2004912a593de55b9ccb00a9ed26
Author: Syauqi <kahmadsyauqi@upi.edu>
Date:   Fri Nov 10 17:52:15 2023 +0700

    Update dependency versions

commit 2a568fe068f20b17a40b8481f8caf7e0d61487d7
Author: Syauqi <kahmadsyauqi@upi.edu>
Date:   Fri Nov 10 17:49:43 2023 +0700

    Change minimum stability to dev

commit 0bff54248704ec077b44a547ef50979a8c127690
Author: Syauqi <kahmadsyauqi@upi.edu>
Date:   Fri Nov 10 05:51:57 2023 +0700

    Create Take Exam page

commit 618c3f7ddd0125299dfa16e4f9a3708d14d1ea45
Author: Syauqi <kahmadsyauqi@upi.edu>
Date:   Fri Nov 10 05:48:14 2023 +0700

    Hide filter by course in relation manager

commit 0d5ca483a6ced0dbc1e883bf59d0a9a69faa6d55
Author: Syauqi <kahmadsyauqi@upi.edu>
Date:   Thu Nov 9 17:35:45 2023 +0700

    Add filter by course

commit e71262fe12ccfb3843d3829ffd6d7792ff2945

--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,22 @@
         {
             "type": "vcs",
             "url": "https://github.com/zoltech/laravel-permission-mongodb.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/TappNetwork/filament-timezone-field.git"
         }
     ],
     "require": {
         "php": "^8.1",
+        "awcodes/filament-tiptap-editor": "^3.0",
         "filament/filament": "^3.0",
+        "filament/spatie-laravel-translatable-plugin": "^3.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "tapp/filament-timezone-field": "^3.0",
         "zoltech/laravel-permission-mongodb": "dev-master"
     },
     "require-dev": {
@@ -73,6 +80,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
